# quterm

./: CMakeLists.txt  PKGBUILD  main.cpp  quterm.desktop
